@@ -70,7 +70,7 @@ public class StandaloneDisabledTest extends QuorumPeerTestBase {
         LOG.info("Configuration after adding 2 followers:\n"
                  + new String(zkHandles[leaderId].getConfig(this, new Stat())));
 
-	//shutdown leader- quorum should still exist
+        //shutdown leader- quorum should still exist
         shutDownServer(leaderId);
         ReconfigTest.testNormalOperation(zkHandles[follower1], zkHandles[follower2]);
 
@@ -91,6 +91,18 @@ public class StandaloneDisabledTest extends QuorumPeerTestBase {
         testReconfig(follower2, false, reconfigServers);
         LOG.info("Configuration after removing leader and follower 1:\n"
                 + new String(zkHandles[follower2].getConfig(this, new Stat())));
+
+        // Try to remove follower2, which is the only remaining server. This should fail.
+        reconfigServers.clear();
+        reconfigServers.add(Integer.toString(follower2));
+        try {
+            zkHandles[follower2].reconfig(null, reconfigServers, null, -1, new Stat());
+            Assert.fail("reconfig completed successfully even though there is no quorum up in new config!");
+        } catch (KeeperException.BadArgumentsException e) {
+            // This is expected.
+        } catch (Exception e) {
+            Assert.fail("Should have been BadArgumentsException!");
+        }
 
         //Add two participants and change them to observers to check
         //that we can reconfigure down to one participant with observers.
